fixed the button spacing

--- a/public/stylesheets/cover.css
+++ b/public/stylesheets/cover.css
@@ -19,6 +19,10 @@ a:hover {
   border: 1px solid #fff;
 }
 
+.btn {
+  margin: 20px;
+}
+
 
 /*
  * Base structure
